--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,12 @@
   <div id="toast">
     Workout Added Successfully!
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="/api.js"></script>
   <script src="/workout.js"></script>
   <script src="/index.js"></script>
+  
 </body>
 
 </html>
